--- a/style.css
+++ b/style.css
@@ -5,7 +5,28 @@
 }
 
 :root {
-      --primary-color:orange;
-      --background-color:pink;
+      --primary-color:rgb(254, 179, 41);
+      --background-color:rgb(219, 197, 201);
       --text-color:lightgray;
+}
+
+header{
+      background-color: var(--background-color);
+}
+.main nav{
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+}
+nav ul{
+      display: flex;
+      list-style: none;
+}
+ul li{
+      padding: 20px;
+}
+li a{
+      text-decoration: none;
+      font-size: 20px;
+      color: black;
 }
